--- a/TasksP2P/package.json
+++ b/TasksP2P/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^12.0.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/native": "^7.1.17",
@@ -26,7 +27,10 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-webrtc": "^124.0.6"
+    "react-native-webrtc": "^124.0.6",
+    "react-dom": "19.1.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "resolutions": {
     "metro": "0.82.5",
